# ChangeLog for xfce-extra/xfce4-clipman
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman/ChangeLog,v 1.47 2009/03/30 13:14:49 angelos Exp $

*xfce4-clipman-0.9.1 (30 Mar 2009)

  30 Mar 2009; Christoph Mende <angelos@gentoo.org>
  +xfce4-clipman-0.9.1.ebuild:
  Version bump

*xfce4-clipman-0.9.0 (18 Jan 2009)

  18 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +xfce4-clipman-0.9.0.ebuild:
  Version bump

  08 Nov 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-clipman-0.8.0.ebuild, xfce4-clipman-0.8.1.ebuild:
  Remove old and add empty IUSE

  26 Sep 2008; Jeroen Roovers <jer@gentoo.org> xfce4-clipman-0.8.1.ebuild:
  Stable for HPPA (bug #235407).

  27 Aug 2008; Raúl Porcel <armin76@gentoo.org> xfce4-clipman-0.8.1.ebuild:
  alpha/ia64 stable wrt #235407

  24 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  xfce4-clipman-0.8.1.ebuild:
  Stable on sparc, bug #235407

  22 Aug 2008; Markus Meier <maekke@gentoo.org> xfce4-clipman-0.8.1.ebuild:
  x86 stable, bug #235407

  22 Aug 2008; nixnut <nixnut@gentoo.org> xfce4-clipman-0.8.1.ebuild:
  Stable on ppc wrt bug 235407

  12 May 2008; Markus Rothe <corsair@gentoo.org> xfce4-clipman-0.8.1.ebuild:
  Stable on ppc64

  10 Apr 2008; Samuli Suominen <drac@gentoo.org> xfce4-clipman-0.8.1.ebuild:
  amd64 stable

*xfce4-clipman-0.8.1 (22 Mar 2008)

  22 Mar 2008; Samuli Suominen <drac@gentoo.org>
  +xfce4-clipman-0.8.1.ebuild:
  Version bump.

  24 Oct 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-clipman-0.8.0.ebuild:
  Fix FEATURES=test and unrestrict it

  15 Mar 2007; Samuli Suominen <drac@gentoo.org> xfce4-clipman-0.8.0.ebuild:
  RESTRICT="test" which is not supported by goodies upstream.

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> xfce4-clipman-0.8.0.ebuild:
  Stable on ppc64; bug #169987

  12 Mar 2007; Bryan Østergaard <kloeri@gentoo.org>
  xfce4-clipman-0.8.0.ebuild:
  Stable on Alpha + IA64.
