@@ -1,8 +1,8 @@
 DIST xfce4-clipman-plugin-0.8.1.tar.bz2 206726 RMD160 eb97072244adbd2530600104aede225b80242ea9 SHA1 ab8434116dc6cb5ded09bdb5021e03d3a17a5dc9 SHA256 04b2fb7dca997da91337dae5e6df8eaf9dd471440d0d504992ad9a92fe268c88
-DIST xfce4-clipman-plugin-0.9.0.tar.bz2 289622 RMD160 35a17d3f04857f582f528ff8d3c664e8591360e0 SHA1 c0c6c80e68b600f758436ee5e134a4a23721dad1 SHA256 afe0a43dee7864d2a71742353604fa508f4887900dcdf382640f0561641caeac
 DIST xfce4-clipman-plugin-0.9.1.tar.bz2 289842 RMD160 e584f9a98be424c469478b579f7f751b9622bf9d SHA1 c99265239033fe2d1e024c0386873a48baed52dd SHA256 263159f5ebcef7ba08a9645a8ed2b95bb406d0c483ec46298ccc13c32a8a4137
+DIST xfce4-clipman-plugin-1.0.1.tar.bz2 497532 RMD160 76b78e2caac83fa9f57f11b9559378eb16e031ab SHA1 abff86fe8d945eb8f20a88c53b8ada1f16a61f02 SHA256 186053ca72fceab169cd0551b08d396e3200330d4e267cf84e26b1dece8d63d8
 EBUILD xfce4-clipman-0.8.1.ebuild 449 RMD160 801e97497fa0cfeaa3febabc2af79d4d80f071d1 SHA1 24fc16ad9ae0ed9c12c06f8364d3fa9799acdcfe SHA256 3efbb7398e8823122aff5c608c8c2b534483f2f353848ed1999effb824358f25
-EBUILD xfce4-clipman-0.9.0.ebuild 448 RMD160 153baa59ebd64a51675747a7cd46f41ec59b41e7 SHA1 1cd370f0d448d9062bf90e803e4c6c3c8213ec26 SHA256 001ab9319ee285fd38d1079ab9d356087721743395bf91fae53b3d6c747a0646
 EBUILD xfce4-clipman-0.9.1.ebuild 447 RMD160 8c12b76887517ca5f86d09bd91b13ae4a975edc1 SHA1 66eb7f233824cc4333086f81867a763b893365e6 SHA256 de6612bdf2a27a7795ed2b19be4e46b2e228e9b52fe21835c2e05ff2dc90c912
-MISC ChangeLog 5652 RMD160 2b9de69c60a928d3c3631d33dbd0a8d0af09aa6b SHA1 0b9dca17565e079c48fd01c049a821b10e7e0ae3 SHA256 ff29b3df795109ce54cd159846cb0eaa019d2b0e1e84a39647697ed5eb5a15d1
+EBUILD xfce4-clipman-1.0.1.ebuild 702 RMD160 e88e49c4d12ff7ff28df275ef13e526f746dc823 SHA1 348493f09c245915237b5a39264143b6fa1cf70c SHA256 e2dde5f059cc7d37c87ad1f3fa0b911e614f1922621d5145ce406fa41b07508f
+MISC ChangeLog 5816 RMD160 acb954459d1bbd19e8a58a53dfb751838c4a76bf SHA1 f77ed740abb2d3435d9a87e8d9c11671435502b6 SHA256 7fdbef0d0f593fa726b62a84922d4c075236db813f41534e50c99274ba1d1582
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
