@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-clipman
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman/ChangeLog,v 1.47 2009/03/30 13:14:49 angelos Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman/ChangeLog,v 1.48 2009/05/18 21:00:19 angelos Exp $
+
+*xfce4-clipman-1.0.1 (18 May 2009)
+
+  18 May 2009; Christoph Mende <angelos@gentoo.org>
+  -xfce4-clipman-0.9.0.ebuild, +xfce4-clipman-1.0.1.ebuild:
+  Version bump
 
 *xfce4-clipman-0.9.1 (30 Mar 2009)
 
